--- a/Om_Oss/Om_Oss.css
+++ b/Om_Oss/Om_Oss.css
@@ -72,12 +72,6 @@ ul#menu li a:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-
-a {
-  color: white;
-}
-
-}
 #footer div.column{
   margin:0 0 25px 0;}
 #footer {
@@ -92,4 +86,13 @@ a {
 	font-size:15px;
 	color:#FFF;
 	text-align:right;
+}
+
+#logo a.logo{
+	display:block;
+	background:url(img/sted.png) no-repeat;
+	background-size:50px;
+	background-position:30px 0;
+	width:230px;
+	height:116px;
 }
