--- a/Om_Oss/Om_Oss.css
+++ b/Om_Oss/Om_Oss.css
@@ -30,6 +30,7 @@ body{
   padding-top: 10px;
   padding-left: 15px;
   padding-right: 15px;
+  padding-bottom: 10px;
   flex-grow: 1;
   flex-shrink: 1;
   background-color: white;
