--- a/Om_Oss/Om_Oss.css
+++ b/Om_Oss/Om_Oss.css
@@ -76,6 +76,8 @@ ul#menu li a:hover {
 #footer div.column{
   margin:0 0 25px 0;}
 #footer {
+  color: white;
+  font-size: 17px;
   background-color: #333333;
 }
 #footer .logo-bw{width:125px;}
@@ -88,7 +90,6 @@ ul#menu li a:hover {
 	color:#FFF;
 	text-align:right;
 }
-
 #logo a.logo{
 	display:block;
 	background:url(img/sted.png) no-repeat;
@@ -96,4 +97,8 @@ ul#menu li a:hover {
 	background-position:30px 0;
 	width:230px;
 	height:116px;
+}
+
+.column {
+  column-count: 4
 }
