--- a/CSS/general.css
+++ b/CSS/general.css
@@ -30,10 +30,10 @@ body{
   margin-top: 15px;
   margin-left: 250px;
   margin-bottom: 15px;
-  padding-top: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 10px;
+  padding-top: 15px;
+  padding-left: 25px;
+  padding-right: 20px;
+  padding-bottom: 15px;
   flex-grow: 1;
   flex-shrink: 1;
   background-color: white;
@@ -107,6 +107,10 @@ ul#menu li a:hover {
 .column {
   column-count: 4
 }
+
+/* Kontakt side CSS*/
+.textarea-kontakt{width:90%; height:60px;
+padding-top: 5px}
 
 
 /* Admin side CSS*/
